--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ JB :
     gauges :
         site_id : 'SITE ID'
     google : 
-        tracking_id : 'UA-123-12'
+        tracking_id : 'UA-108427730-1'
     getclicky :
       site_id : 
     mixpanel :
