--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title : Denghui Zhang
 tagline: Site Tagline
 author :
   name : Denghui Zhang
-  email : ustbdenghui@126.com
+  email : ustbdenghui@gmail.com
   github : zdh2292390
   # twitter : username
   feedburner : feedname
